<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewFolderNameDialogTitle"
        style="@style/TextAppearance.AppCompat.Title.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:text="@string/folder_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFolderNameDialogContent"
        style="@style/TextAppearance.AppCompat.Content.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:text="@string/folder_new_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFolderNameDialogTitle" />

    <EditText
        android:id="@+id/editTextFolderNameDialogFolderTitle"
        style="@style/TextAppearance.AppCompat.Content.Dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_32"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@color/light_gray"
        android:cursorVisible="true"
        android:hint="@string/folder_title_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:nestedScrollingEnabled="true"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFolderNameDialogContent"
        tools:ignore="LabelFor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFolderNameDialogDelete"
        style="@style/Widget.MaterialComponents.Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/folder_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFolderNameDialogFolderTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFolderNameDialogCancel"
        style="@style/Widget.MaterialComponents.Button.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonFolderNameDialogDelete"
        app:layout_constraintTop_toBottomOf="@+id/editTextFolderNameDialogFolderTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>