<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewNoteBack"
        android:layout_width="@dimen/dimen_48"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginEnd="@dimen/dimen_4"
        android:padding="@dimen/dimen_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewFolderMore"
        android:layout_width="@dimen/dimen_48"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_6"
        android:padding="@dimen/dimen_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewNoteDate"
        style="@style/TextAppearance.AppCompat.Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_56"
        android:text="@string/note_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNoteTitle"
        style="@style/TextAppearance.AppCompat.Title.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_24"
        android:background="@null"
        android:cursorVisible="true"
        android:hint="@string/note_title_hint"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:nestedScrollingEnabled="true"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNoteDate"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextNoteContent"
        style="@style/TextAppearance.AppCompat.Content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0"
        android:layout_marginHorizontal="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@null"
        android:cursorVisible="true"
        android:gravity="top|end"
        android:hint="@string/note_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:nestedScrollingEnabled="true"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNoteTitle"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>